--- a/enVision-Magazine/css/styleVM.css
+++ b/enVision-Magazine/css/styleVM.css
@@ -748,7 +748,7 @@ nav {
 @media screen and (min-width: 539px) and (max-width: 668px) {
   header {
        height: 15%;
-       width: 102%;
+       width: 100%;
        margin-top: -2%;
        margin-left: -2%;
        padding: 1%;
@@ -782,6 +782,7 @@ nav {
     height: 20%;
   }
   footer p {
+    white-space: nowrap;
     font-size: 12px;
   }
 }
@@ -791,11 +792,32 @@ nav {
         height: 25%;
         padding: 2%;
     }
+    form {
+      height: 70%;
+      margin-top: 0.5%;
+    }
     .searchButton img {
        width: 100%;
        margin-left: 5%;
    }
 }
+
+@media screen and (width: 540px) {
+  .logo {
+    width: 1000%;
+  }
+  nav {
+    gap: 0px;
+  }
+  form {
+    width: 1000%;
+  }
+  .searchButton img {
+    width: 200%;
+    margin-left: -25%;
+  }
+}
+
 
 /* Media Query: Mobile (≤500px) */
 @media screen and (max-width: 500px) {
@@ -805,13 +827,13 @@ nav {
     margin-left: -2%;
    }
   .logo img{
-       width: 60%;
+       width: 44%;
    }
    form {
        width: 500%;
    }
    .searchButton img {
-       width: 150%;
+       width: 160%;
    }
     #menu-icon {
         display: block;
@@ -908,6 +930,9 @@ nav {
       margin-top: -2%;
       margin-left: -2%;
     }
+    .searchButton img {
+      margin-left: -10%;
+    }
  }
 
 @media screen and (max-width: 400px) {
@@ -931,18 +956,28 @@ nav {
         margin-top: -2.5%;
     }
     form {
-        width: 150%;
+        width: 200%;
     }
     .searchButton img {
-        width: 150%;
+        width: 160%;
+        margin-left: -20%;
     }
     
 }
 
 @media screen and (min-width: 343px) and (max-width: 345px) {
+  .logo img{
+    width: 55%;
+  }
   form {
     width: 666%;
     height: 77%;
+  }
+ }
+
+ @media screen and (width: 390px) {
+  form {
+    height: 60%;
   }
  }
 
@@ -971,6 +1006,19 @@ nav {
     }
 }
 
+@media screen and (min-width: 800px) and (max-width: 900px) { 
+  form {
+        width: 333%;
+    }
+  .searchButton img {
+        width: 150%;
+        margin-left: -10%;
+  }
+  footer {
+    width: 96%;
+  }
+}
+
 @media screen and (width: 1024px) and (height: 768px) {
     header {
         margin-top: -1%;
@@ -978,12 +1026,32 @@ nav {
     }
 }
 
+@media screen and (min-width: 700px) and (max-width: 800px) {
+    .logo {
+      width: 350%;
+    }
+    nav {
+      gap: 0px;
+    }
+    nav a {
+      padding-left: 25px;
+    }
+    form {
+      height: 77%;
+    }
+    .searchButton img {
+      width: 100%;
+      margin-left: 5%;
+    }
+ }
+
 @media screen and (min-width: 760px) and (max-width: 770px) {
     header {
         margin-top: -1%;
         margin-left: -1%;
     }
 }
+
 @media screen and (min-width: 730px) and (max-width: 750px) {
     header {
         height: 25%;
@@ -992,6 +1060,24 @@ nav {
         margin-left: -1%;
     }
 }
+
+@media screen and (width: 896px) {
+    footer {
+      width: 96%;
+    }
+ }
+
+@media screen and (min-width: 800px) and (max-width: 900px) {
+    .strTop::after {
+      top: -25
+    }
+ }
+
+@media screen and (min-width: 900px) and (max-width: 950px) {
+    .strTop::after {
+      top: -25
+    }
+ }
 
 
 @media screen and (width: 912px) and (height: 1368px) {
@@ -1004,13 +1090,46 @@ nav {
     .searchButton img {
         margin-left: -27%;
     }
+    .stories {
+      width: 280px;
+    }
     .logo img{
        width: 60%;
     }
 }
 
+@media screen and (width: 1024px) and (height: 768px) {
+    header {
+      width: 101%;
+    }
+    .stories {
+      width: 280px;
+    }
+    .strTop::after {
+      top: -25;
+    }
+ }
+
+ @media screen and (width: 1024px) and (height: 600px) {
+    header {
+      width: 101%;
+      margin-top: -1%;
+      margin-left: -1%;
+    }
+    .stories {
+      width: 280px;
+    }
+    .strTop::after {
+      top: -25;
+    }
+
+ }
+
+
+
 @media screen and (width: 1024px) and (height: 1366px) {
     header {
+        width: 101%;
         height: 12%;
         margin-top: -1%;
         margin-left: -1%;
@@ -1039,6 +1158,9 @@ nav {
     form {
       width: 555%;
     }
+    .strTop::after {
+      top: -25;
+    }
 }
 
 @media screen and (width: 853px) and (height: 1280px) {
@@ -1054,6 +1176,24 @@ nav {
     }
     nav {
        margin-top: -2.5%;
+    }
+}
+
+@media screen and (width: 1180px) {
+  header {
+    width: 101%;
+  }
+    form {
+      width: 144%;
+    }
+    .searchButton img {
+      width: 90%;
+    }
+    .stories {
+      width: 300px;
+    }
+    .strTop::after {
+      top: -25;
     }
 }
 
